# mtg_inventory_tool

./: .gitignore  .inventory_tool_state.json  AGENTS.md  DEV_README.md  LICENSE  README.md  ROADMAP.md  inventory.db  main.py  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: frontend-backend-request.yml
.github/workflows/: ci.yml
.jupyter/config/: migrated
.jupyter/runtime/: jupyter_cookie_secret
MtG Source Stack/: README.md  ingestion_flow.md  mtg_source_stack_walkthrough.ipynb  mvp_importer.py  personal_inventory_cli.py  sample_inventory_import.csv
MtG Source Stack/mtg_source_stack/: __init__.py  mvp_importer.py  (+1 more)
contracts/: README.md  openapi.json
docs/: README.md  api_v1_contract.md  architecture.md  backend_v1_contract.md  frontend_backend_requests.md  frontend_build_checklist.md  frontend_demo_refinement_handoff.md  frontend_handoff.md  frontend_search_autocomplete_checklist.md  import_export_followups.md  ingestion_flow.md  restructure_checklist.md  schema_full.sql  schema_mvp.sql  shared_service_deploy.md  source_map.md
examples/: sample_queries.sql
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
notebooks/: 00_repo_architecture_walkthrough.ipynb  01_db_and_migrations_walkthrough.ipynb  02_importer_walkthrough.ipynb  03_inventory_domain_walkthrough.ipynb  04_reporting_and_api_contract_walkthrough.ipynb  demo_inventory.db  mtg_source_stack_walkthrough.ipynb  review_inventory.ipynb
scripts/: benchmark_import_pipeline.py  bootstrap_frontend_demo.py  open_notebook.sh  shared_service_proxy_harness.py  smoke_shared_service_proxy.py  test_backend.sh  test_backend_web.sh
tests/: __init__.py  common.py  optional_dependencies.py  test_api_app.py  test_api_contract.py  test_api_dependencies.py  test_cli_smoke.py  test_csv_import.py  test_db_runtime.py  test_deck_url_import.py  test_decklist_import.py  test_entrypoints.py  test_frontend_demo_bootstrap.py  test_frontend_demo_scripts.py  test_importer.py  test_inventory_access.py  test_inventory_audit.py  test_inventory_service.py  test_inventory_tool.py  test_mtg_source_stack.py  test_schema_migrations.py  test_shared_service_proxy_harness.py  test_web_api.py
(+243 files in other folders)
