[project]
name = "mtg-inventory-tool"
version = "0.1.0"
description = "Local-first Magic: The Gathering source stack and personal inventory CLI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
mtg-mvp-importer = "mtg_source_stack.mvp_importer:main"
mtg-personal-inventory = "mtg_source_stack.personal_inventory_cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mtg_source_stack = ["*.sql"]
