[project]
name = "mtg-inventory-tool"
version = "0.1.0"
description = "Local-first Magic: The Gathering source stack and personal inventory CLI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-multipart>=0.0.20,<1",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.115,<1",
    "httpx>=0.27,<1",
    "uvicorn>=0.30,<1",
]

[project.scripts]
mtg-mvp-importer = "mtg_source_stack.mvp_importer:main"
mtg-personal-inventory = "mtg_source_stack.personal_inventory_cli:main"
mtg-web-api = "mtg_source_stack.api.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mtg_source_stack = ["*.sql"]
"mtg_source_stack.db.migrations" = ["*.sql"]
